feat: :bug: solucion de bugs